# coding-quest-solutions

./: README.md  downloader.py  main.py  pyproject.toml  pytest.ini
2022/: 05-03.py  05-05.py
2023/: 03-08.py  03-09.py  03-14.py  03-15.py  03-17.py
2024/: 03-04.py  03-05.py  03-06.py  03-07.py  03-08.py  03-11.py  03-12.py  03-13.py  03-14.py
2024/input/: 03-06.txt  03-11.txt
data/: 10.txt  14.txt  34.txt
downloader/: __init__.py
solutions/: 05.py  06.py  07.py  08.py  09.py  10.py  13.py  14.py  15.py  16.py  17.py  18.py  31.py  36.py
solutions/2022/: 05-02.py  05-03.py  05-04.py
solutions/2023/: 03-07.py  03-10.py  03-13.py  03-16.py
solutions/2024/: 03-06.py  03-11.py
tests/: conftest.py  test_solutions.py
