[project]
name = "coding-quest-solutions"
version = "0.1.0"
description = "Solutions to https://codingquest.io/"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "downloader"
